--- a/about.html
+++ b/about.html
@@ -116,6 +116,7 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="about-background">
+                    <i class="fa fa-bezier-curve"></i>
                     <h5 class="about-card-title">Background</h5>
                     <p>
                       Phasellus pulvinar nisl ornare leo porttitor, et
@@ -126,6 +127,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="about-teamwork">
+                    <i class="fa fa-users-cog"></i>
                     <h5 class="about-card-title">Teamwork</h5>
                     <p>
                       Suspendisse ullamcorper, mi vel molestie ornare, arcu
@@ -136,12 +138,102 @@
                 </div>
                 <div class="col-md-4">
                   <div class="about-volumn">
+                    <i class="fab fa-creative-commons-sampling"></i>
                     <h5 class="about-card-title">Our Core Value</h5>
                     <p>
                       Nunc mi ante, suscipit vel dapibus et, volutpat sit amet
                       ante. In tempor nec sem vitae varius. Aliquam tincidunt
                       orci sem, et imperdiet massa consectetur nec.
                     </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="about-people">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="about-profile">
+                    <div class="row">
+                      <div class="col-md-4">
+                        <img
+                          class="profile-image"
+                          src="assets/img/about-02.jpg"
+                        />
+                      </div>
+                      <div class="col-md-8">
+                        <h5 class="profile-title">John Henry</h5>
+                        <h6>CEO/Founder</h6>
+                        <p>
+                          Aliquam non vulputate lectus, vel ultricies diam.
+                          Suspendisse at ipsum hendrerit, vestibulum mi id,
+                          mattis tortor.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!--  -->
+                <div class="col-md-6">
+                  <div class="about-profile">
+                    <div class="row">
+                      <div class="col-md-4">
+                        <img
+                          class="profile-image"
+                          src="assets/img/about-03.jpg"
+                        />
+                      </div>
+                      <div class="col-md-8">
+                        <h5 class="profile-title">Timy Cake</h5>
+                        <h6>Project Director</h6>
+                        <p>
+                          Quisque in bibendum elit, in egestas turpis.
+                          Vestibulum ornare sollicitudin congue. Aliquam lorem
+                          mi, maximus at iaculis ut
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="about-profile">
+                    <div class="row">
+                      <div class="col-md-4">
+                        <img
+                          class="profile-image"
+                          src="assets/img/about-04.jpg"
+                        />
+                      </div>
+                      <div class="col-md-8">
+                        <h5 class="profile-title">Jay Zoona</h5>
+                        <h6>Supervisor</h6>
+                        <p>
+                          Maecenas eu mi eu dui cursus consequat non eu metus.
+                          Morbi ac turpis eleifend, commodo purus eget, commodo
+                          mauris.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="about-profile">
+                    <div class="row">
+                      <div class="col-md-4">
+                        <img
+                          class="profile-image"
+                          src="assets/img/about-05.jpg"
+                        />
+                      </div>
+                      <div class="col-md-8">
+                        <h5 class="profile-title">Catherine Soft</h5>
+                        <h6>Team Leader</h6>
+                        <p>
+                          Integer eu sapien hendrerit, imperdiet arcu sit amet,
+                          sollicitudin ipsum. Phasellus consequat suscipit
+                          ligula eget bibendum.
+                        </p>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
