--- a/contact.html
+++ b/contact.html
@@ -98,19 +98,47 @@
             ></iframe>
           </div>
           <div class="info">
-            <h5 class="contact-title">Contact us</h5>
+            <h4 class="contact-title">Contact us</h4>
 
             <div class="row">
               <div class="col-md-7">
                 <div class="contact-1">
-                  <span class="input-title">Name</span>
-                  <input class="input-box" />
-                  <span class="input-title">Email</span>
-                  <input class="input-box" />
-                  <span class="input-title">Subject</span>
-                  <input class="input-box" />
-                  <span input-title>Message</span>
-                  <input class="input-box-big" />
+                  <div class="input">
+                    <label for="name">Name</label>
+                    <input
+                      class="input-box"
+                      type="text"
+                      id="name"
+                      name="name"
+                    /><br />
+                  </div>
+                  <div class="input">
+                    <label for="email">Email</label>
+                    <input
+                      class="input-box"
+                      type="text"
+                      id="email"
+                      name="email"
+                    /><br />
+                  </div>
+                  <div class="input">
+                    <label for="subject">Subject</label>
+                    <input
+                      class="input-box"
+                      type="text"
+                      id="subject"
+                      name="subject"
+                    /><br />
+                  </div>
+                  <div class="input">
+                    <label for="message">Message</label>
+                    <textarea
+                      class="input-box"
+                      type="text"
+                      id="lname"
+                      name="lname"
+                    ></textarea>
+                  </div>
                 </div>
               </div>
               <div class="col-md-5">
@@ -124,6 +152,20 @@
                     Maecenas eu mi eu dui cursus consequat non eu metus. Morbi
                     ac turpis eleifend, commodo purus eget, commodo mauris.
                   </p>
+                  <div class="all-contact-social-icon">
+                    <div class="social-icon">
+                      <i class="fa fa-facebook"></i>
+                    </div>
+                    <div class="social-icon">
+                      <i class="fa fa-twitter"></i>
+                    </div>
+                    <div class="social-icon">
+                      <i class="fa fa-instagram"></i>
+                    </div>
+                    <div class="social-icon">
+                      <i class="fa fa-linkedin"></i>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
