--- a/singlePost.html
+++ b/singlePost.html
@@ -179,7 +179,7 @@
                   <div class="comment-input">
                     <input class="input" />
                     <input class="input" />
-                    <input class="input-0" />
+                    <textarea class="input-0"></textarea>
                   </div>
                   <div class="submit">
                     <button class="submit-button">Submit</button>
